fix: attempt to resolve Moon SVG rendering issues on Safari

--- a/components/Hero/ParticleBackground.module.css
+++ b/components/Hero/ParticleBackground.module.css
@@ -32,6 +32,8 @@
     width: 100%;
     height: 100%;
     filter: drop-shadow(0 0 2.5rem rgba(255, 255, 255, 0.4));
+    -webkit-filter: drop-shadow(0 0 2.5rem rgba(255, 255, 255, 0.4));
+    transform: translateZ(0);
 }
 
 .star {
